# smart-watch

./: CMakeLists.txt  Firmware_Design_Pattern.drawio  Makefile  sdkconfig  sdkconfig.old
components/SensorLib/: CMakeLists.txt
components/apps/: CMakeLists.txt
components/apps/navigation/: CMakeLists.txt
components/customhal/: CMakeLists.txt  app_hal.cpp
components/custominclude/: main.h
components/customui/: CMakeLists.txt  ui.c  ui.h
components/faces/: CMakeLists.txt
components/hal/esp32/: app_hal.cpp
components/pcf85063/: pcf85063.c  pcf85063.h
components/st7789/: CMakeLists.txt  st7789.c  st7789.h
main/: CMakeLists.txt  app_main.c  idf_component.yml  lv_conf.h
ref/esp-idf-st7789/: sdkconfig  sdkconfig.old
ref/esp-idf-st7789-lvgl/: sdkconfig
